# octo_navigation

./: .gitignore  .gitmodules  README.md
alert_rviz_plugins/: CMakeLists.txt  package.xml
alert_rviz_plugins/include/alert_nav_plugins/: alert_panel.hpp
alert_rviz_plugins/src/: alert_panel.cpp
astar_2D_planner/: CMakeLists.txt  astar_2D_planner.xml  package.xml
astar_2D_planner/include/astar_2D_planner/: astar_2D_planner.h
astar_2D_planner/src/: astar_2D_planner.cpp
astar_2d_planner/: CMakeLists.txt
astar_2d_planner/include/astar_2d_planner/: astar_2d_planner.h
astar_2d_planner/src/: astar_2d_planner.cpp  exe_path_node.cpp
astar_2d_planner/srv/: StartNav.srv
astar_octo_msgs/: CMakeLists.txt  package.xml
astar_octo_msgs/srv/: PlanPath.srv
astar_octo_planner/: CMakeLists.txt  astar_octo_planner.xml  package.xml
astar_octo_planner/include/astar_octo_planner/: astar_octo_planner.h
astar_octo_planner/src/: astar_octo_planner.cpp
bring_up_alert_nav/: CMakeLists.txt  package.xml  setup.py
bring_up_alert_nav/bring_up_alert_nav/: hw_bridge_node.py
bring_up_alert_nav/launch/: alert_nav_launch.py  mbf_alert_nav_server_launch.py
bring_up_alert_nav/params/: mbf_alert_2d_nav.yaml  mbf_alert_nav.yaml  offset_frames.yaml
bring_up_alert_nav/src/: exe_path_node.cpp
bringup/: CMakeLists.txt  package.xml
bringup/launch/: exe_path_launch.py
bringup/src/: exe_path_node.cpp
dijkstra_2d_planner/: CMakeLists.txt  dijkstra_2d_planner.xml  package.xml
dijkstra_2d_planner/include/dijkstra_2d_planner/: dijkstra_2d_planner.h
dijkstra_2d_planner/src/: dijkstra_2d_planner.cpp
make_plan_service/: package.xml  setup.cfg  setup.py
make_plan_service/make_plan_service/: density_astar_path_planner.py  path_planner.py
make_plan_service/resource/: arena.bt
mbf_octo_core/: CMakeLists.txt  package.xml
mbf_octo_core/include/mbf_octo_core/: octo_controller.h  octo_planner.h  octo_recovery.h
mbf_octo_nav/: CMakeLists.txt  package.xml
mbf_octo_nav/cfg/: MoveBaseFlex.cfg
mbf_octo_nav/include/mbf_octo_nav/: octo_controller_execution.h  octo_navigation_server.h  octo_planner_execution.h  octo_recovery_execution.h
mbf_octo_nav/src/: mbf_octo_nav.cpp  octo_controller_execution.cpp  octo_navigation_server.cpp  octo_planner_execution.cpp  octo_recovery_execution.cpp
mesh_planner/: CMakeLists.txt  mesh_planner.xml  package.xml
mesh_planner/include/mesh_planner/: mesh_planner.h
mesh_planner/src/: mesh_planner.cpp
octo_controller/: CMakeLists.txt  octo_controller.xml  package.xml
octo_controller/cfg/: OctoController.cfg
octo_controller/include/octo_controller/: octo_controller.h
octo_controller/src/: octo_controller.cpp
pure_pursuit_controller/: package.xml  setup.py
pure_pursuit_controller/pure_pursuit_controller/: obstacle_avoidance_path_to_vel.py  path_to_vel.py
skpawar1305_octo_planner/: CMakeLists.txt  astar_octo_planner.xml  package.xml
skpawar1305_octo_planner/include/astar_octo_planner/: astar_octo_planner.h
skpawar1305_octo_planner/include/octo_astar_planner/: octo_astar_planner.hpp
skpawar1305_octo_planner/src/: astar_octo_planner.cpp
