<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mbf_octo_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="m.kirsch@fh-aachen.de">max</maintainer>
  <license>Apache-2.0</license>

    <depend>geometry_msgs</depend>
    <depend>mbf_abstract_nav</depend>
    <depend>mbf_simple_core</depend>
    <depend>mbf_octo_core</depend>
    <depend>mbf_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>rclcpp</depend>
    <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
